<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryTextColor"
    tools:context=".PaymentSuccess">

    <TextView
        android:id="@+id/tv_succ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/ps_succ"
        android:textColor="#FFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="194dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/payment"
        android:contentDescription="@string/img_desc"
        app:layout_constraintBottom_toTopOf="@+id/tv_p_thanks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_succ"
        app:layout_constraintVertical_bias="0.193" />

    <TextView
        android:id="@+id/tv_p_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/ps_thanks"
        android:textColor="@color/primaryDarkColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <ImageView
        android:id="@+id/ps_img1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_p_thanks"
        />

    <TextView
        android:id="@+id/tv_ref_succ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/ps_desc"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ps_img1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_succ"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="105dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:onClick="Go_to_BarcodeScanner"
        android:text="@string/ps_scan"
        android:textAllCaps="false"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn"
        app:layout_constraintTop_toBottomOf="@+id/tv_ref_succ" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:onClick="Go_to_Profile"
        android:text="@string/ps_profile"
        android:textAllCaps="false"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_succ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ref_succ" />

</androidx.constraintlayout.widget.ConstraintLayout>