<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryTextColor"
    tools:context=".PaymentFailed">

    <TextView
        android:id="@+id/tv_succ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="76dp"
        android:text="@string/pf_fail"
        android:textColor="#FFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="194dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/payment_fail"
        android:contentDescription="@string/img_desc"
        app:layout_constraintBottom_toTopOf="@+id/tv_ref_succ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_succ" />

    <TextView
        android:id="@+id/tv_ref_succ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="52dp"
        android:gravity="center"
        android:text="@string/pf_desc"
        android:textColor="@color/primaryTextColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_succ"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/try_again_25"
        app:iconGravity="end"
        app:iconTint="#000"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="105dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:onClick="Go_to_Cart"
        android:text="@string/pf_retry"
        android:textAllCaps="false"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn"
        app:layout_constraintTop_toBottomOf="@+id/tv_ref_succ" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:onClick="Go_to_Profile"
        android:text="@string/ps_profile"
        android:textAllCaps="false"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_succ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ref_succ" />

</androidx.constraintlayout.widget.ConstraintLayout>