<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryLightColor"
    tools:context=".ShopDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_details_header"
        android:fontFamily="@font/aclonica"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:layout_marginTop="160dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_details_main"
        android:fontFamily="@font/aclonica"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/sd_et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:inputType="none"
        android:textColor="@color/primaryTextColor"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/sd_et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:inputType="none"
        android:textColor="@color/primaryTextColor"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/sd_et3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:inputType="none"
        android:textColor="@color/primaryTextColor"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round"
        android:layout_marginTop="30dp"
        android:text="@string/start_shop"
        android:onClick="startShopping"
        android:padding="10dp"
        android:textColor="#FFF"
        android:backgroundTint="@color/primaryDarkColor"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>